# gst-python-ml

./: .gitignore  COPYING  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  PIPELINES.md  README.md  loop.py  pyproject.toml  requirements.txt  setup.py
benchmarks/: README.md  deepstream_pipeline.py
data/: gst_analytics_object_detector.json  prompt_for_llm.txt  prompt_for_stable_diffusion.txt  sample_captions.json  sample_metadata.json
demos/soccer/: app.py
pipelines/: caption_dual_stream.py  filter_dual_stream.py
plugins/python/: aggregator_base.py  analytics_utils.py  analyticsoverlay.py  base_aggregator.py  base_classifier.py  base_llm.py  base_objectdetector.py  base_transcribe.py  base_transform.py  base_translate.py  birds_eye.py  birdseye.py  caption.py  classifier.py  classifier_base.py  coquitts.py  format_converter.py  global_logger.py  gst_aggregator.py  gst_analytics_aggregator.py  gst_analytics_base_transform.py  gst_analytics_llm.py  gst_analytics_object_detector.py  gst_analytics_stream_demux.py  gst_analytics_stream_mux.py  gst_analytics_transcribe.py  gst_analytics_translate.py  gst_analytics_tts.py  gst_analytics_video_transform.py  gst_base_transform.py  gst_feature_manager.py  gst_llm.py  gst_object_detector.py  gst_stream_demux.py  gst_stream_mux.py  gst_transcribe.py  gst_translate.py  gst_tts.py  gst_video_transform.py  kafkasink.py  (+34 more)
requirements/: caption_requirements.txt  captioning.txt  language.txt  language_requirements.txt
tests/: test_pipelines.py
utils/: symlink_dir.py  symlink_repo.py  synthesize.py  test_metadata.py
(+88 files in other folders)
